--- a/index.html
+++ b/index.html
@@ -3,23 +3,29 @@
   <head>
     <title>Axela</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Karma" rel="stylesheet">
   </head>
   <body>
-    <div id="simple">
+    <div class = "simple" id="simple">
       <h1>Iris</h1>
       <p id="iris-message">Hello! My name is Iris.</p>
-      <input id="iris-input" type="text">
-      <button id="iris-submit">Submit</button>
-      <p>
+      <input class = "iris-input" id="iris-input" type="text">
+      <button class = "button" id="iris-submit">Submit</button>
+      <p class = "commands">
         <b>Commands:</b><br>
         Where do you live?</br>
         What are you?</br>
         How old are you?</br>
         What is the meaning of life?</br>
-        Tell me a joke.</br>
+        Tell me a joke</br>
+        What do you want on your tombstone? </br>
+        Are you afraid of an animal?</br>
+        Who do you look up to? </br>
+        What's your favorite movie genre? </br>
+        What is your strongest personal quality? </br>
       </p>
     </div>
-    <div id="advanced">
+    <!-- <div id="advanced">
       <h1>Axela</h1>
       <p id="axela-message">Hello! My name is Axela.</p>
       <input id="axela-input" type="text">
@@ -40,7 +46,7 @@
         <b>"Show" Subjects:</b><br>
         dog
       </p>
-    </div>
+    </div> --> 
     <script src="simple.js"></script>
     <script src="advanced.js"></script>
   </body>
